# live-api-demos

./: CMakeLists.txt  CognitoAuth.cpp  CurlDebug.cpp  README.md
Linux_LiveAPI_Demo_CPP/: Awssigv4.h  CurlDebug.h  README.md  main.cpp
Windows_LiveAPI_Demo_CPP/: README.md  heartrate_sample.csv  live_api_demo_cpp.sln
Windows_LiveAPI_Demo_CPP/include/aws-cpp-cognito-auth/: Auth.hpp  Exception.hpp
Windows_LiveAPI_Demo_CPP/src/aws-cpp-cognito-auth/: Auth.cpp  Srp.cpp  aws-cpp-cognito-auth.vcxproj  packages.config
Windows_LiveAPI_Demo_CPP/src/aws-cpp-cognito-auth/include/: Base64.hpp  BigNumber.hpp  Crypt.hpp  Helpers.hpp  Srp.hpp
Windows_LiveAPI_Demo_CPP/src/live-api-demo-cpp/: Awssigv4.cc  Awssigv4.h  CognitoAuth.cpp  Config.cpp  LiveApiDemo.cpp  live-api-demo-cpp.vcxproj
liveAPI_Demo_CPP/: Awssigv4.cc  Config.cpp  heartrate_sample.csv  main.cpp
